Fix misalignment in .hero

--- a/source/assets/stylesheets/components/_components.hero.sass
+++ b/source/assets/stylesheets/components/_components.hero.sass
@@ -17,7 +17,6 @@
 .hero__subtitle
   font-size: 18px
   margin-top: 10px
-  max-width: 70%
   line-height: 1.2
 
 .hero__paragraph
